Fit more content on small screens (fixes #5)

--- a/assets/styl/components/profile.styl
+++ b/assets/styl/components/profile.styl
@@ -10,6 +10,7 @@
     border 5px solid $blue
     border-radius 50%
     box-sizing border-box
+    max-width 80%
     padding 5px
 
     @media (min-width: 720px)
@@ -18,9 +19,9 @@
 .profile-title
     color $blueDarker
     font-family $fancyFont
-    font-size 46px
-    font-size 12vw
-    margin -50px 0 0
+    font-size 44px
+    font-size 11vw
+    margin -70px 0 0
     shadow $blue #fff 1px
 
     @media (min-width: 560px)
@@ -32,5 +33,8 @@
 
 .profile-desc
     color #999
-    font-size 22px
+    font-size 18px
     font-style italic
+
+    @media (min-width: 560px)
+        font-size 22px
